--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -1,5 +1,13 @@
+@import "~src/variables";
+
 :host {
   flex: 20%;
   display: flex;
   flex-direction: column;
+  background-color: $sidebar-background;
+  color: white;
+}
+
+.layer-element {
+  padding: 0.3rem 1rem;
 }
